<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="character"
            type="com.ssong_develop.rickmorty.entities.Characters" />

        <variable
            name="activity"
            type="com.ssong_develop.rickmorty.ui.detail.CharacterDetailActivity" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:descendantFocusability="blocksDescendants">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{() -> activity.onBackPressed()}"
                android:padding="12dp"
                android:translationZ="100dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_arrow" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_app_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                android:translationZ="100dp"
                app:layout_constraintBottom_toBottomOf="@id/iv_back"
                app:layout_constraintStart_toEndOf="@id/iv_back"
                app:layout_constraintTop_toTopOf="@id/iv_back" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_character_index"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                android:text="@{`#`+ Integer.toString(character.id)}"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                android:translationZ="100dp"
                app:layout_constraintBottom_toBottomOf="@id/tv_app_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/tv_app_name"
                tools:text="#001" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/header"
                android:layout_width="match_parent"
                android:layout_height="440dp"
                android:background="@color/app_bar_color"
                android:elevation="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.CardView" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_character"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_marginBottom="24dp"
                android:scaleType="centerCrop"
                android:transitionName="@string/transition_image"
                android:translationZ="100dp"
                app:layout_constraintBottom_toBottomOf="@id/header"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_app_name"
                app:paletteImage="@{character.image}"
                app:paletteView="@{header}" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="40dp"
                android:text="@{character.name}"
                android:textColor="@color/white"
                android:transitionName="@string/transition_name"
                android:textSize="32sp"
                android:textStyle="bold"
                android:translationZ="100dp"
                app:layout_constraintBottom_toBottomOf="@id/header"
                app:layout_constraintStart_toStartOf="@id/header"
                tools:text="Rick" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/status_dot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:textStyle="bold"
                android:translationZ="100dp"
                android:text="@string/bullet"
                bind_dot_color="@{character.status}"
                app:layout_constraintStart_toStartOf="@id/name"
                app:layout_constraintTop_toTopOf="@id/status"
                app:layout_constraintBottom_toBottomOf="@id/status"
                app:layout_constraintEnd_toStartOf="@id/status"
                tools:text="●" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                android:text="@{character.status}"
                android:translationZ="100dp"
                android:layout_marginTop="2dp"
                android:layout_marginStart="6dp"
                app:layout_constraintStart_toEndOf="@id/status_dot"
                app:layout_constraintTop_toBottomOf="@id/name"
                app:layout_constraintBottom_toBottomOf="@id/header"
                tools:text="Status" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/species_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white_56"
                android:layout_marginTop="14dp"
                android:text="@string/species_title"
                app:layout_constraintStart_toStartOf="@id/name"
                app:layout_constraintTop_toBottomOf="@id/header"
                tools:text="@string/species_title"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/species"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                android:text="@{character.species}"
                app:layout_constraintStart_toStartOf="@id/name"
                app:layout_constraintTop_toBottomOf="@id/species_title"
                tools:text="Species"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/gender_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white_56"
                android:text="@string/gender_title"
                android:layout_marginTop="14dp"
                app:layout_constraintStart_toStartOf="@id/name"
                app:layout_constraintTop_toBottomOf="@id/species"
                tools:text="@string/gender_title"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                android:text="@{character.gender}"
                app:layout_constraintStart_toStartOf="@id/name"
                app:layout_constraintTop_toBottomOf="@id/gender_title"
                tools:text="Gender"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/location_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white_56"
                android:text="@string/location_title"
                android:layout_marginTop="14dp"
                app:layout_constraintStart_toStartOf="@id/name"
                app:layout_constraintTop_toBottomOf="@id/gender"
                tools:text="@string/location_title"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                android:text="@{character.location.locationName}"
                app:layout_constraintStart_toStartOf="@id/name"
                app:layout_constraintTop_toBottomOf="@id/location_title"
                tools:text="Location"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>